<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/tvNoItems"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/no_attributes_create_new_attributes_to_update_them_to_the_backend"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/recycler"
            app:layout_constraintTop_toTopOf="@id/recycler"
            tools:visibility="visible" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layout_constraintBottom_toTopOf="@id/btnCreateAttribute"
            app:layout_constraintTop_toTopOf="parent"
            tools:itemCount="5"
            tools:listitem="@layout/row_attribute" />

        <Button
            android:id="@+id/btnCreateAttribute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_add"
            android:text="@string/create_attribute"
            app:layout_constraintBottom_toTopOf="@id/btnUpdateAttributes" />

        <Button
            android:id="@+id/btnUpdateAttributes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_sync_cloud"
            android:text="@string/update_attributes"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/included_wait_dialog"
        layout="@layout/layout_wait"
        android:visibility="gone"
        tools:visibility="visible" />
</FrameLayout>
